adding swiper to my home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -51,55 +53,57 @@
 
         <section class="home" id="home">
 
-            <div class="swiper home-slider">
-
+            <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide slide">
-                        <div class="content">
-                            <span>our special dish</span>
-                            <h3>spicynoodles</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, tempore maxime officia obcaecati rerum magni !</p>
-                            <a href="#" class="btn">order now</a>
-                        </div>
-                        <div class="image">
-                            <img src="images/home-img-1.png" alt="">
-                        </div>
-
-                        <div class="swiper-slide slide">
-                            <div class="content">
-                                <span>our special dish</span>
-                                <h3>fried chicken</h3>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat pariatur cumque autem in </p>
-
-                                <a href="#" class="btn">order now</a>
-                            </div>
-                            <div class="image">
-                                <img src="images/home-img-2.png" alt="">
-
-                            </div>
-
-                            <div class="swiper-slide slide">
-                                <div class="content">
-                                    <span>our special dish</span>
-                                    <h3>Hot pizza</h3>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat pariatur cumque autem in </p>
-    
-                                    <a href="#" class="btn">order now</a>
-                                </div>
-                                <div class="image">
-                                    <img src="images/home-img-3.png" alt="">
-                                </div>
-                        </div>
-
-
+                  <div class="swiper-slide">
+                    <div class="content">
+                        <span>our special dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                        <a href="#" class="btn">order now</a>
                     </div>
-
-                    <div class="swiper-pagination">
-
-                    </div>
+                    <div class="image">
+                        <img src="images/home-img-1.png" alt="">
+                    </div></div>
+                  <div class="swiper-slide"><div class="content">
+                    <span>our special dish</span>
+                    <h3>spicy noodles</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                    <a href="#" class="btn">order now</a>
                 </div>
-
-            </div>
+                <div class="image">
+                    <img src="images/home-img-2.png" alt="">
+                </div></div>
+                  <div class="swiper-slide"><div class="content">
+                    <span>our special dish</span>
+                    <h3>spicy noodles</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                    <a href="#" class="btn">order now</a>
+                </div>
+                <div class="image">
+                    <img src="images/home-img-3.png" alt="">
+                </div></div>
+                  <div class="swiper-slide"><div class="content">
+                    <span>our special dish</span>
+                    <h3>spicy noodles</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                    <a href="#" class="btn">order now</a>
+                </div>
+                <div class="image">
+                    <img src="images/home-img-3.png" alt="">
+                </div></div>
+                  <div class="swiper-slide"><div class="content">
+                    <span>our special dish</span>
+                    <h3>spicy noodles</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                    <a href="#" class="btn">order now</a>
+                </div>
+                <div class="image">
+                    <img src="images/home-img-1.png" alt="">
+                </div></div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
 
         </section>
 
@@ -268,7 +272,7 @@
 
 
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script src="js/main.js"></script>
 </body>
