updating the nav section, adding responsiveness to all divices.

--- a/index.html
+++ b/index.html
@@ -19,33 +19,41 @@
     <!-- Header section start -->
     <header>
         <section class="flex">
-            <a href="#" class="logo"><i class="fas fa-utensils"></i>Swahili Dishes</a>
-            <nav class="navbar">
-                <a class="active" href="#home">home</a>
-                <a href="#dishes">dishes</a>
-                <a href="#about">about</a>
-                <a href="#menu">menu</a>
-                <a href="#reviews">reviews</a>
-                <a href="#orders">orders</a>
+            <nav>
+                <ul class="menu">
+                    <li class="logo"><a href="#"><i class="fas fa-utensils"></i>Swahili-DIshes</a></li>
+                    <li class="item"><a href="#">home</a></li>
+                    <li class="item"><a href="#">dishes</a></li>
+                    <li class="item has-submenu">
+                        <a tabindex="0">about</a>
+                        <ul class="submenu">
+                            <li class="subitem"><a href="#"></a></li>
+                            <li class="subitem"><a href="#"></a></li>
+                            <li class="subitem"><a href="#"></a></li>
+                            <li class="subitem"><a href="#"></a></li>
+                        </ul>
+                    </li>
+                    <li class="item has-submenu">
+                        <a tabindex="0">Menu</a>
+                        <ul class="submenu">
+                            <li class="subitem"><a href="#"></a></li>
+                            <li class="subitem"><a href="#"></a></li>
+                            <li class="subitem"><a href="#"></a></li>
+                        </ul>
+                    </li>
+                    <li class="item"><a href="#">reviews</a></li>
+                    <li class="item"><a href="#">orders</a>
+                    </li>
+                    <li class="item button"><a href="#"><i class="fas fa-search"></i></a></li>
+                    <li class="item button secondary"><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+                </ul>
             </nav>
-
-            <div class="icons">
-                <i class="fas fa-bars" id="menu-bars"></i>
-                <i class="fas fa-search" id="search-icon"></i>
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-shopping-cart"></a>
-            </div>
+     
         </section>
     </header>
 
     <!-- header section ends -->
-
-    <!-- search form -->
-    <form action="" id="search-form">
-        <input type="search" placeholder="search here..." name="" id="search-box">
-        <label for="search-box" class="fas fa-search"></label>
-        <i class="fas fa-times" id="close"></i>
-    </form>
 
     <!-- home section starts -->
 
