fixing bugs in the header section

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <nav>
                 <ul class="menu">
                     <li class="logo"><a href="#"><i class="fas fa-utensils"></i>Swahili Dishes</a></li>
-                    <li class="item"><a href="#">home</a></li>
-                    <li class="item"><a href="#">dishes</a></li>
+                    <li class="item"><a href="#home">home</a></li>
+                    <li class="item"><a href="#dishes">dishes</a></li>
                     <li class="item has-submenu">
-                        <a tabindex="0">about</a>
+                        <a tabindex="0" href="#about">about</a>
                         <ul class="submenu">
                             <li class="subitem"><a href="#">Free Delivery</a></li>
                             <li class="subitem"><a href="#">Easy Payment</a></li>
                             <li class="subitem"><a href="#">24/7 Service</a></li>
                         </ul>
                     </li>
-                    <li class="item"><a href="#">gallary</a></li>
-                    <li class="item"><a href="#">reviews</a></li>
-                    <li class="item"><a href="#">orders</a>
+                    <li class="item"><a href="#gallary">gallary</a></li>
+                    <li class="item"><a href="#reviews">reviews</a></li>
+                    <li class="item"><a href="#prders">orders</a>
                     </li>
                     <li class="item button"><a href="#"><i class="fas fa-search"></i></a></li>
                     <li class="item button secondary"><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -270,13 +270,14 @@
 
 <!-- about section ends -->
 
-<!-- Swiper -->
+<!-- gallary section starts -->
+
 <div class="container">
 
     <section class="gallary">
 
         <h3 class="sub-heading"> our gallary </h3>
-        <h1 class="heading"> we never disapoint </h1>
+        <h1 class="heading"> we never disappoint </h1>
 <div class="swiper mySwiper" id="gallary">
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="images/bt1.jpg"  alt=""></div>
@@ -291,6 +292,9 @@
   </div>
 </section>
 </div>
+
+<!-- gallary section ends -->
+
 <!-- review section starts  -->
 
 <div class="container">
@@ -309,7 +313,7 @@
                     <div class="user">
                         <img src="images/pic-1.png" alt="">
                         <div class="user-info">
-                            <h3>john deo</h3>
+                            <h3>joel dio</h3>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -327,7 +331,7 @@
                     <div class="user">
                         <img src="images/pic-2.png" alt="">
                         <div class="user-info">
-                            <h3>john deo</h3>
+                            <h3>joel dio</h3>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -345,7 +349,7 @@
                     <div class="user">
                         <img src="images/pic-3.png" alt="">
                         <div class="user-info">
-                            <h3>john deo</h3>
+                            <h3>joel dio</h3>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -363,7 +367,7 @@
                     <div class="user">
                         <img src="images/pic-4.png" alt="">
                         <div class="user-info">
-                            <h3>john deo</h3>
+                            <h3>joel dio</h3>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
